--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "test": "cross-env TS_NODE_TRANSPILE_ONLY=1 mocha --require espower-typescript/guess --timeout 3000 --exit 'src/test/*.test.ts'",
     "test:coverage": "TS_NODE_COMPILER_OPTIONS='{\"target\":\"es6\"}' nyc npm test",
     "build": "tsc -p tsconfig.json",
-    "prepare": "npm run build"
+    "prepare": "npm run build",
+    "pub": "npm publish --access public"
   },
   "repository": {
     "type": "git",
