--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "access": "public"
   },
   "version": "0.0.10",
-  "description": "感知器",
+  "description": "感知器是一个逐渐演化的机器学习包",
   "main": "lib/index.js",
   "directories": {
     "lib": "lib",
